# sevengg

./: .dockerignore  Cargo.toml  Dockerfile  docker-compose.yml
prisma/: schema.prisma
src/: commands.rs  db.rs  emote.rs  main.rs  sevengg.rs
src/commands/: addemote.rs
